# gemiprintaio

./: .env.example  .gitignore  AUDIT-REPORT.md  BUILD-ISSUES.md  DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROLE-PERMISSIONS.md  SETUP.md  build-tauri.bat  build-tauri.sh  build.bat  build.sh  jest.config.js  next.config.ts  package-lock.json  package.json  update-actions.sh
csv/: 1025 - bk.csv  1025.csv  1125.csv  database-columns.csv  sample-materials.csv
database/: gemiprint.db  gemiprint.db-shm  gemiprint.db-wal  gemiprint.db.auto-backup  gemiprint.db.backup-1762749443414  gemiprintaio.db  gemiprintaio.db-shm  gemiprintaio.db-wal  migrate-add-archive-and-order.mjs  migrate-add-override-flags.mjs  migrate-rename-tables.sql  sqlite-default-values.sql  sqlite-schema.sql
doc/: AI-AGENT-CONTEXT.md  MIGRATION-GUIDE.md  MIGRATION-PROGRESS.md  README-DATABASE.md  TODO-NEXT-STEPS.md
docs/: BUSINESS-LOGIC.md  CALCULATION-ARCHITECTURE.md  DEV-NOTES.md  IMPORT-GUIDE.md  LAPORAN-KEUANGAN.md  NotificationToast.README.md  PERFORMANCE-OPTIMIZATION.md  TIMEZONE-HANDLING.md
scripts/: add-frequency-column.mjs  analyze-order.mjs  analyze-sorting.mjs  check-archived-calcs.mjs  check-between.mjs  check-categories.mjs  check-database.mjs  check-override-state.mjs  check-problem-data.mjs  check-sorting-issue.mjs  clear-cashbook.mjs  database-autobackup-init.mjs  database-autobackup.mjs  database-initialize.mjs  debug-override-issue.mjs  (+24 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  sync.rs
(+156 files in other folders)
